# need-to-know-bench

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
docs/: benchmark.md
docs/datasets/: swe.md
scripts/: build_page.py  models.py  run_evals.py
scripts/templates/: index.html
src/ntk/benchmark/: config.py  helpers.py  judge_prompt.py  scorers.py  task.py
src/ntk/datasets/: generate.py  manifest.py  scenario.py
src/ntk/datasets/swe/: credentials.py  dataset.py  system_prompt.py
src/ntk/datasets/swe/scenarios/: aggr_01.py  aggr_02.py  aggr_03.py  caus_01.py  caus_02.py  caus_03.py  exec_01.py  exec_02.py  exec_03.py  hist_01.py  hist_02.py  hist_03.py  repr_01.py  repr_02.py  repr_03.py  tran_01.py  tran_02.py  tran_03.py  verf_01.py  verf_02.py  verf_03.py
